# tickerizer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  tickerizer.cabal  wrangler.toml
.github/workflows/: ci.yml
app/: Constants.hs  Main.hs
src/: Pre.hs  Tickerizer.hs  lib.rs  tickers.rs  utils.rs
