cabal-version:       3.0
name:                tickerizer
version:             0.0.0.0
synopsis:            See README for more info
description:
    See README for more info.
    See [README.md](https://github.com/njaremko/tickerizer#tickerizer) for more details.
homepage:            https://github.com/njaremko/tickerizer
bug-reports:         https://github.com/njaremko/tickerizer/issues
license:             MIT
license-file:        LICENSE
author:              Nathan Jaremko
maintainer:          Nathan Jaremko <njaremko@wealthsimple.com>
copyright:           2022 Nathan Jaremko
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

source-repository head
  type:                git
  location:            https://github.com/njaremko/tickerizer.git

common common-options
  build-depends:       base ^>= 4.14.3.0
                     , QuickCheck
                     , aeson
                     , bytestring
                     , bytestring-trie
                     , containers
                     , cookie
                     , dotenv
                     , envparse
                     , envy
                     , fused-effects
                     , quickcheck-instances
                     , relude
                     , req
                     , uri-encode
                     , servant
                     , servant-server
                     , servant-lucid
                     , lucid
                     , stm
                     , text
                     , time
                     , transformers
                     , vector
                     , wai 
                     , warp

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    ghc-options:       -Wunused-packages

  default-extensions:  ApplicativeDo BangPatterns ConstraintKinds DataKinds DefaultSignatures DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable DerivingStrategies DuplicateRecordFields EmptyCase ExistentialQuantification FlexibleContexts FlexibleInstances FunctionalDependencies GADTs GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NoImplicitPrelude OverloadedStrings PatternSynonyms RankNTypes ScopedTypeVariables StandaloneDeriving TupleSections TypeApplications TypeFamilies TypeFamilyDependencies TypeOperators

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Tickerizer
  other-modules:       Pre

executable tickerizer
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       tickerizer
  other-modules:       Constants
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
